MIT18.03 ODE update

--- a/_posts/2020-01-23-3.1.Fourier_Series.md
+++ b/_posts/2020-01-23-3.1.Fourier_Series.md
@@ -1,14 +1,16 @@
 ---
 title: 3.1 Fourier Series
 layout: post
-categories: [ODE, Math]
-image: /assets/img/oranges.jpg
+categories: [ODE, Math, MIT 18.06 Differential Equation]
+image: 
 description: "3.1 Fourier Series"
+customexcerpt: "Notes for MIT opencourse 18.03 differential equation"
 ---
 
-## Fourier Series
+* 
+{:toc}
 
-[TOC]
+
 
 ### 引
 
@@ -205,11 +207,11 @@ $$
 
 - 偶延拓
 
-<img src=".\Fourier_Series\even_ext.png" alt="even_ext" style="zoom:67%;" />
+<img src="\assets\img\MIT18.06\Fourier_Series\even_ext.png" alt="even_ext" style="zoom:67%;" />
 
 - 奇延拓
 
-<img src=".\Fourier_Series\odd_ext.png" alt="odd_ext" style="zoom:67%;" />
+<img src="\assets\img\MIT18.06\Fourier_Series\odd_ext.png" alt="odd_ext" style="zoom:67%;" />
 
 ---
 
@@ -221,7 +223,7 @@ $$
 x'' + \omega_{0}^2x = f(t)
 $$
 
-当$f(t)$为三角函数$\left\{\begin{matrix}cos(\omega_{n}t)\\sin(\omega_{n}t)\end{matrix}\right.$时，我们知道一个特解 $x_{p}= \left\{\begin{matrix}cos(\omega_{n}t)\\sin(\omega_{n}t)\end{matrix}\right./{\omega_{0}^{2}-\omega_{n}^{2}}$ 
+当$f(t)$为三角函数 $$\left\{\begin{matrix}cos(\omega_{n}t)\\sin(\omega_{n}t)\end{matrix}\right.$$ 时，我们知道一个特解 $$x_{p}= \left\{\begin{matrix}cos(\omega_{n}t)\\sin(\omega_{n}t)\end{matrix}\right./{\omega_{0}^{2}-\omega_{n}^{2}}$$
 
 所以，如果$f(t)$可以被傅里叶展开，
 
@@ -237,7 +239,7 @@ $$
 
  其中$f(t)$的周期为$2L$, $\omega_{n} = \frac{n\pi}{L}$
 
-另一种解法 待定系数$f(t) = c_{0} + \sum_{n = 1}^{\infty}{a'_{n}cos(\omega_{n}t) + b'_{n}sin(\omega_{n}t)}$ 带入ODE对比
+另一种解法 待定系数 $$f(t) = c_{0} + \sum_{n = 1}^{\infty}{a'_{n}cos(\omega_{n}t) + b'_{n}sin(\omega_{n}t)}$$  带入ODE对比
 
 ---
 
