--- a/_posts/2020-02-01-4.1.linear_ode_system.md
+++ b/_posts/2020-02-01-4.1.linear_ode_system.md
@@ -1,3 +1,12 @@
+---
+title: 4.1 linear ode system
+layout: post
+categories: [ODE, Math, MIT 18.06 Differential Equation]
+image: 
+description: "4.1 linear ode system"
+customexcerpt: "Notes for MIT opencourse 18.03 differential equation"
+---
+
 # 常微分方程组（一）：引入&线性齐次方程组解法
 
 #### 引
@@ -12,7 +21,10 @@
 
 - **一组因变量关于自变量的显式表达**
 
-[toc]
+* 
+{:toc}
+
+
 
 ### 一阶常微分方程组
 
@@ -80,11 +92,11 @@ y' = g(x,y)
 \end{matrix}\right.
 $$
 
-解 $\begin{bmatrix}
-x(t)\\y(t)\end{bmatrix}$是什么？ 参数曲线
+解 $$\begin{bmatrix}
+x(t)\\y(t)\end{bmatrix}$$是什么？ 参数曲线
 
-方程组 $\begin{bmatrix}
-x'(t)\\y'(t)\end{bmatrix}$ 是什么？切向量
+方程组 $$\begin{bmatrix}
+x'(t)\\y'(t)\end{bmatrix}$$ 是什么？切向量
 
 所以x, y平面上每一点都对应一个切向量
 
@@ -99,13 +111,16 @@ x'(t)\\y'(t)\end{bmatrix}$ 是什么？切向量
 将一个因变量用别的因变量表示
 
 > e.g.
+>
 > $$
 > \left\{\begin{matrix}
 > x' = -2x + 2y\\ 
 > y' = 2x - 5y
 > \end{matrix}\right.
 > $$
+>
 > $y = \frac{x'+2x}{2}$带入二式即可求解得
+>
 > $$
 > \left\{\begin{matrix}
 > x = c_1e^{-t} + c_2e^{-6t}\\ 
@@ -123,31 +138,37 @@ $$
 由消元法我们知道解的结构为指数函数的线性组合
 
 不妨设解为
+
 $$
 \begin{bmatrix}x\\y\end{bmatrix} = \begin{bmatrix}a_1\\a_2\end{bmatrix}e^{\lambda t}
 $$
+
 带入方程组
+
 $$
 \begin{bmatrix}x\\y\end{bmatrix}' = \lambda\begin{bmatrix}a_1\\a_2\end{bmatrix}e^{\lambda t} = 
 \begin{bmatrix}-2&2\\2&-5\end{bmatrix}\begin{bmatrix}a_1\\a_2\end{bmatrix}e^{\lambda t}
 $$
+
 于是就转换成了求特征值的问题
+
 $$
 \begin{bmatrix}-2&2\\2&-5\end{bmatrix}\begin{bmatrix}a_1\\a_2\end{bmatrix} = \lambda\begin{bmatrix}a_1\\a_2\end{bmatrix}
 $$
+
 回忆：$Ax = \lambda t \rightarrow (A-\lambda I)x = 0$ 令x有非零解的的条件即$det(A-\lambda I) = 0$
 
 所以问题就转化为一个解特征方程的代数问题$(-2-\lambda)(-5-\lambda)-4 = 0$
 
 注：这个特征方程和消元法带入得到的二阶ODE的特征方程相同 两者有本质联系
 
-求出两个特征值 和两个特征向量即可知道$\begin{bmatrix}x\\y\end{bmatrix}$是$v e^{\lambda t}$的线性组合
+求出两个特征值 和两个特征向量即可知道$$\begin{bmatrix}x\\y\end{bmatrix}$$是$v e^{\lambda t}$的线性组合
 
 其中$ve^{\lambda t}$在科学和工程领域一般被称为**简正模 normal mode**
 
 总结：
 
-2x2矩阵$\begin{bmatrix}a&b\\c&d\end{bmatrix}$特征方程$(a-\lambda)(d-\lambda)-bc = 0\rightarrow \lambda^2-(a+d)\lambda + ad-bc$
+2x2矩阵$$\begin{bmatrix}a&b\\c&d\end{bmatrix}$$特征方程$(a-\lambda)(d-\lambda)-bc = 0\rightarrow \lambda^2-(a+d)\lambda + ad-bc$
 
 即$\lambda^2-tr(A)+det(A)$
 
@@ -157,7 +178,7 @@ $tr(A)$是矩阵的trace
 
 解$\overrightarrow{x} = \overrightarrow{\alpha}e^{\lambda t}$
 
-带入解$|A-\lambda I|  = 0$ 求出特征值$\lambda$ 再求出对应每个特征值的特征向量$\alpha $即可得到通解（特解的线性组合）
+带入解$ \|A-\lambda I\| = 0$ 求出特征值$\lambda$ 再求出对应每个特征值的特征向量$\alpha $即可得到通解（特解的线性组合）
 
 $\overrightarrow{x} = c_1\overrightarrow{\alpha_1}e^{\lambda_1 t} + \cdots + c_n\overrightarrow{\alpha_n}e^{\lambda_n t}$
 
@@ -174,12 +195,14 @@ e.g. 对于二阶齐次线性方程组 $x''+bx'+kx = 0$
 另$y = x'$ 则$y'+by+kx = 0\Rightarrow y' = -kx - by$
 
 和$x' = y$ 联立 即得到
+
 $$
 \begin{pmatrix}x\\y\end{pmatrix}' = A\begin{pmatrix}x\\y\end{pmatrix} = \begin{pmatrix}0&1\\-k&-b\end{pmatrix}\begin{pmatrix}x\\y\end{pmatrix}
 $$
+
 其中矩阵A称为线性方程的**相伴矩阵 Cmpanion Matrix** (网上查不到中文 和**多项式的相伴矩阵有联系**)
 
-即可求得解$u(t) = \begin{bmatrix}x\\x'\end{bmatrix}$
+即可求得解$$u(t) = \begin{bmatrix}x\\x'\end{bmatrix}$$
 
 ---
 
@@ -244,7 +267,7 @@ $$
 
   - 取特征空间基向量的一个线性组合$\textbf{v}$ 满足$(A-\lambda I)\textbf{v} = \textbf{0}$（至于为什么是线性组合 怎么样的线性组合 之后会说明）
 
-  - $(A-\lambda I)\textbf{w}_1 = \textbf{v}\quad(A-\lambda I)\textbf{w}_2 = \textbf{w}_1\quad\cdots\quad(A-\lambda I)\textbf{w}_p = \textbf{w}_{p-1}$ 得到广义特征向量
+  - $$(A-\lambda I)\textbf{w}_1 = \textbf{v}\quad(A-\lambda I)\textbf{w}_2 = \textbf{w}_1\quad\cdots\quad(A-\lambda I)\textbf{w}_p = \textbf{w}_{p-1}$$ 得到广义特征向量
 
   - or just $(A-\lambda I)^{q+1}\textbf{w}_q = 0$ 
 
@@ -255,6 +278,7 @@ $$
   - 则特解为
 
   - 包含广义特征向量的项
+
     $$
     e^{\lambda t}(tv+w_1),\quad e^{\lambda t}(\frac{t^2}{2}v+tw_1+w_2)\\,\cdots,e^{\lambda t}(\frac{t^p}{p!}v+\frac{t^{p-1}}{(p-1)!}w_1+\cdots+tw_{p-1}+w_p)
     $$
@@ -284,14 +308,14 @@ $$
 
   - 一些参考
 
-    https://math.stackexchange.com/questions/825804/general-solution-of-a-system-of-linear-differential-equations-with-multiple-gene 写的最清楚
+    [general-solution-of-a-system-of-linear-differential-equations-with-multiple-gene](https://math.stackexchange.com/questions/825804/general-solution-of-a-system-of-linear-differential-equations-with-multiple-gene) 写的最清楚
 
-    https://math.stackexchange.com/questions/2519560/generalized-eigenvectors-for-systems-of-odes
+    [generalized-eigenvectors-for-systems-of-odes](https://math.stackexchange.com/questions/2519560/generalized-eigenvectors-for-systems-of-odes)
 
-    https://math.stackexchange.com/questions/289353/system-of-differential-equations-with-triple-eigenvalue
+    [system-of-differential-equations-with-triple-eigenvalue](https://math.stackexchange.com/questions/289353/system-of-differential-equations-with-triple-eigenvalue)
 
-    https://math.stackexchange.com/questions/332974/linear-ode-repeated-eigenvalues-how-to-find-more-than-2-generalized-eigenvectors
+    [linear-ode-repeated-eigenvalues-how-to-find-more-than-2-generalized-eigenvectors](https://math.stackexchange.com/questions/332974/linear-ode-repeated-eigenvalues-how-to-find-more-than-2-generalized-eigenvectors)
 
-    https://www.math.upenn.edu/~moose/240S2013/slides8-01.pdf
+    [slides8-01](https://www.math.upenn.edu/~moose/240S2013/slides8-01.pdf)
 
-    https://en.wikipedia.org/wiki/Generalized_eigenvector
+    [Generalized_eigenvector](https://en.wikipedia.org/wiki/Generalized_eigenvector)
