--- a/_posts/2020-02-01-4.2.fundamental matrix.md
+++ b/_posts/2020-02-01-4.2.fundamental matrix.md
@@ -1,6 +1,17 @@
+---
+title: 4.2 Fundamental Matrix
+layout: post
+categories: [ODE, Math, MIT 18.06 Differential Equation]
+image: 
+description: "4.2 Fundamental Matrix"
+customexcerpt: "Notes for MIT opencourse 18.03 differential equation"
+---
+
 # 常微分方程组（二）：部分理论及常系数非齐次线性方程组
 
-[toc]
+* 
+{:toc}
+
 
 ### 关于线性微分方程组的理论
 
@@ -16,7 +27,7 @@ $\textbf{x}' = A\textbf{x}$的通解为$\textbf{x} = c_1\textbf{x}_1 + c_2\textb
 
 对于方程组的一组解
 
-朗斯基行列式  Wronskian $W(\textbf{x}_1,\textbf{x}_2,\cdots,\textbf{x}_n) := |\textbf{x}_1,\textbf{x}_2,\cdots,\textbf{x}_n|$ 是关于自变量t的函数
+朗斯基行列式  Wronskian $W(\textbf{x}_1,\textbf{x}_2,\cdots,\textbf{x}_n) := \|\textbf{x}_1,\textbf{x}_2,\cdots,\textbf{x}_n\|$ 是关于自变量t的函数
 
 这组解线性相关 iff  $\forall t, W(t) = 0$
 
@@ -27,9 +38,11 @@ $\textbf{x}' = A\textbf{x}$的通解为$\textbf{x} = c_1\textbf{x}_1 + c_2\textb
 #### 存在唯一性理论 Existence and uniqueness theorem
 
 如果矩阵值函数$A(t)$的每一元素都在开区间$I$上连续，则IVP
+
 $$
 \textbf{x}' = A(t)\textbf{x},\qquad \textbf{x}(t_0) = \textbf{x}_0\qquad(t\in I)
 $$
+
 在$I$上有且仅有一个解$\textbf{x}(t)$
 
 #### Linear independence theorem
@@ -81,7 +94,7 @@ $\textbf{x}_1,\textbf{x}_2,\cdots,\textbf{x}_n$是一组线性无关解
 
 #### 性质
 
-1. $\forall t,\ |X|\neq0$
+1. $\forall t,\ \|X\|\neq0$
 
 2. $X' = AX$ 矩阵微分方程
 
@@ -103,7 +116,7 @@ $\textbf{x}_1,\textbf{x}_2,\cdots,\textbf{x}_n$是一组线性无关解
 
 #### 正交基本矩阵
 
-若基本矩阵$\tilde{X}_{t_0}$满足 $X(t_0) = I$   即$\textbf{x}_1(t_0) = \begin{pmatrix}1\\0\end{pmatrix}$, $\textbf{x}_2(t_0) = \begin{pmatrix}0\\1\end{pmatrix}$
+若基本矩阵$\tilde{X}_{t_0}$满足 $X(t_0) = I$   即$$\textbf{x}_1(t_0) = \begin{pmatrix}1\\0\end{pmatrix}$$, $$\textbf{x}_2(t_0) = \begin{pmatrix}0\\1\end{pmatrix}$$
 
 则称$\tilde{X}_{t_0}$为在$t_0$处的**正交基本矩阵 normalized fundamental matrix** 且该矩阵唯一
 
@@ -118,9 +131,11 @@ $$
 **如何寻找正交基本矩阵?**
 
 先找到一个基本矩阵$X$  则
+
 $$
 \tilde{X}_{t_0}(t) = X(t)X(t_0)^{-1}
 $$
+
 容易证明（就是解方程组）
 
 也容易验证其为系统的解（略）
@@ -145,22 +160,29 @@ $$
 #### 参数变分法 variation of parameters
 
 特解$\textbf{x}_p$有如下形式
+
 $$
 \textbf{x}_p = v_1(t)\textbf{x}_1 + \cdots + v_n(t)\textbf{x}_n
 $$
+
 注意 其中$\textbf{x}_1,\cdots,\textbf{x}_n$为齐次方程组的解
 
 写成矩阵形式
+
 $$
 \textbf{x}_p = X\textbf{v}
 $$
+
 带入系统$\textbf{x}' = A\textbf{x}+\textbf{r}(t)$
 
 易证$(X\textbf{v})' = X'\textbf{v}+ X\textbf{v}'$
+
 $$
 X'\textbf{v}+ X\textbf{v}' = AX\textbf{v} + \textbf{r}
 $$
+
 因为$X' = Ax$, 所以
+
 $$
 X\textbf{v}' = \textbf{r}
 $$
@@ -174,9 +196,11 @@ $$
 $$
 
 所以特解
+
 $$
 \textbf{x}_p = X \int X^{-1}\textbf{r}\ dt
 $$
+
 积分后无需加上常数项 因为我们只需要找到一个解
 
 如果积分后加上常数项$\textbf{c}$ 注意到$X\textbf{c}$即为通解$\textbf{x}_c$
