--- a/_posts/2020-02-01-4.4.matrix_exponential.md
+++ b/_posts/2020-02-01-4.4.matrix_exponential.md
@@ -1,13 +1,27 @@
+---
+title: 4.4 Matrix Exponential
+layout: post
+categories: [ODE, Math, MIT 18.06 Differential Equation]
+image: 
+description: "4.4 Matrix Exponential"
+customexcerpt: "Notes for MIT opencourse 18.03 differential equation"
+---
+
 # 常微分方程组（四）：矩阵指数及其应用
 
-[toc]
+* 
+{:toc}
+
+
 
 类比$x' = ax$ 的解$ce^{at}$
 
 $e^{At}$ 矩阵指数定义如下
+
 $$
 e^{At} = I + At + \frac{A^2t^2}{2!}+\frac{A^3t^3}{3!}+\cdots=\sum_{n = 0}^\infty \frac{A^nt^n}{n!}
 $$
+
 带入系统$X' = AX$ 易证$e^{At}$是系统的解
 
 ### 解IVP
@@ -52,7 +66,7 @@ $A$与$-A$可交换
 
 - 对于2x2对称矩阵
 
-  $\begin{pmatrix}a&b\\b&a\end{pmatrix} = \begin{pmatrix}a&0\\0&a\end{pmatrix}+\begin{pmatrix}0&b\\b&0\end{pmatrix}$
+  $$\begin{pmatrix}a&b\\b&a\end{pmatrix} = \begin{pmatrix}a&0\\0&a\end{pmatrix}+\begin{pmatrix}0&b\\b&0\end{pmatrix}$$
 
   两矩阵可交换 可以用指数法则拆开
 
@@ -74,8 +88,8 @@ $A$与$-A$可交换
 
 可以参考这个
 
-https://math.stackexchange.com/questions/540248/what-are-sufficient-conditions-for-a-matrix-to-have-the-same-eigenvectors-as-its?rq=1
+[what-are-sufficient-conditions-for-a-matrix-to-have-the-same-eigenvectors-as-its](https://math.stackexchange.com/questions/540248/what-are-sufficient-conditions-for-a-matrix-to-have-the-same-eigenvectors-as-its?rq=1)
 
 及该问题的说明
 
-https://www.zhihu.com/question/368792164
+[矩阵与其指数函数特征值与特征向量的关系?](https://www.zhihu.com/question/368792164)
