--- a/_posts/2020-02-07-4.5.portrait.md
+++ b/_posts/2020-02-07-4.5.portrait.md
@@ -1,6 +1,18 @@
+---
+title: 4.5 Portrait
+layout: post
+categories: [ODE, Math, MIT 18.06 Differential Equation]
+image: 
+description: "4.5 Portrait"
+customexcerpt: "Notes for MIT opencourse 18.03 differential equation"
+---
+
 # 常微分方程组（五）：作图问题
 
-[toc]
+* 
+{:toc}
+
+
 
 ### 2x2常系数齐次方程组作图
 
@@ -13,42 +25,42 @@
 
 - 两特征值为负 nodal sink， asymptotic stable 渐进稳定
 
-  <img src=".\1stODE_system\a_s.png" alt="a_s" style="zoom: 33%;" />
+  <img src="\assets\img\MIT18.06\1stODE_system\a_s.png" alt="a_s" style="zoom: 33%;" />
 
 - 两特征值为正 nodal source，unstable 不稳定
 
-  <img src=".\1stODE_system\a_u.png" alt="a_u" style="zoom: 33%;" />
+  <img src="\assets\img\MIT18.06\1stODE_system\a_u.png" alt="a_u" style="zoom: 33%;" />
 
 - 两特征值一正一负 saddle，unstable 不稳定
 
-  <img src=".\1stODE_system\saddle.png" alt="saddle" style="zoom:33%;" />
+  <img src="\assets\img\MIT18.06\1stODE_system\saddle.png" alt="saddle" style="zoom:33%;" />
 
 - 特征值复数
   - 负实部 spiral sink/asymptotically stable spiral 螺旋向内
 
-    <img src=".\1stODE_system\s-s.png" alt="s-s" style="zoom:33%;" />
+    <img src="\assets\img\MIT18.06\1stODE_system\s-s.png" alt="s-s" style="zoom:33%;" />
 
   - 正实部 螺旋向外 unstable spiral
 
-    <img src=".\1stODE_system\s-u.png" alt="s-u" style="zoom:33%;" />
+    <img src="\assets\img\MIT18.06\1stODE_system\s-u.png" alt="s-u" style="zoom:33%;" />
 
   - 实部为0 stable center 椭圆
 
-    <img src=".\1stODE_system\s_c.png" alt="s_c" style="zoom:33%;" />
+    <img src="\assets\img\MIT18.06\1stODE_system\s_c.png" alt="s_c" style="zoom:33%;" />
 
 - 缺陷特征值 defective node
 
   - 大于0 不稳定
 
-    <img src=".\1stODE_system\d-u.png" alt="d-u" style="zoom:33%;" />
+    <img src="\assets\img\MIT18.06\1stODE_system\d-u.png" alt="d-u" style="zoom:33%;" />
 
   - 小于0 稳定
 
-    <img src=".\1stODE_system\d-s.png" alt="d-s" style="zoom:33%;" />
+    <img src="\assets\img\MIT18.06\1stODE_system\d-s.png" alt="d-s" style="zoom:33%;" />
 
   - 等于0
 
-    <img src=".\1stODE_system\d_0.png" alt="d_0" style="zoom:33%;" />
+    <img src="\assets\img\MIT18.06\1stODE_system\d_0.png" alt="d_0" style="zoom:33%;" />
 
 - 完备特征值 star node
 
@@ -68,11 +80,11 @@
 
     即仿射子空间
 
-    <img src=".\1stODE_system\l_c_s.png" alt="l_c_s" style="zoom:33%;" />
+    <img src="\assets\img\MIT18.06\1stODE_system\l_c_s.png" alt="l_c_s" style="zoom:33%;" />
 
   - $\lambda_1 = 0 < \lambda_2$ 一条线都是临界点 不稳定
 
-    <img src=".\1stODE_system\l_c_u.png" alt="l_c_u" style="zoom:33%;" />
+    <img src="\assets\img\MIT18.06\1stODE_system\l_c_u.png" alt="l_c_u" style="zoom:33%;" />
 
   - $\lambda_1 = \lambda_2 = 0$ 每一个点都是临界点 都是稳定点
 
@@ -80,7 +92,7 @@
 
 #### 迹-行列式图 Trace-Determinant Diagram
 
-![t-d](.\1stODE_system\t-d.png)
+![t-d](\assets\img\MIT18.06\1stODE_system\t-d.png)
 
 0点 即$det(A) = tr(A) = 0 $ 时 除了所以entry为0外 对应缺陷特征值 = 0 的情况
 
@@ -95,12 +107,14 @@ x轴 除0点 对应特征值一0 一实数的情况
 ### 非线性自治方程组作图
 
 对于非线性一阶微分自治方程组
+
 $$
 \left\{\begin{matrix}
 x' = f(x,y)\\ 
 y' = g(x,y)
 \end{matrix}\right.
 $$
+
 #### 作图原则
 
 若$f(x,y),g(x,y)$是光滑的（偏导存在且连续），则解的轨迹不会相交
@@ -127,7 +141,7 @@ $$
 
    - <span style = "color:red;font-weight:bold">雅可比矩阵 Jacobi Matrix</span>
 
-     $\begin{pmatrix}f_x&f_y\\g_x&g_y\end{pmatrix}$
+     $$\begin{pmatrix}f_x&f_y\\g_x&g_y\end{pmatrix}$$
 
      因为雅可比矩阵就是一个局部的线性变换
 
@@ -137,7 +151,7 @@ $$
 
      即
 
-     $\begin{pmatrix}f(x,y)\\g(x,y)\end{pmatrix}\sim \begin{pmatrix}f_{x_0}&f_{y_0}\\g_{x_0}&g_{y_0}\end{pmatrix}\begin{pmatrix}x\\y\end{pmatrix}$ 
+     $$\begin{pmatrix}f(x,y)\\g(x,y)\end{pmatrix}\sim \begin{pmatrix}f_{x_0}&f_{y_0}\\g_{x_0}&g_{y_0}\end{pmatrix}\begin{pmatrix}x\\y\end{pmatrix}$$
 
      所以在$(x_0,y_0)$附近的非线性方程组可以近似为$\textbf{x}' = J_{\textbf{x}_0}\textbf{x}$ !
 
