--- a/_posts/2020-02-07-4.6.limit_cycle.md
+++ b/_posts/2020-02-07-4.6.limit_cycle.md
@@ -1,31 +1,49 @@
+---
+title: 4.6 limit Cycle
+layout: post
+categories: [ODE, Math, MIT 18.06 Differential Equation]
+image: 
+description: "4.6 limit Cycle"
+customexcerpt: "Notes for MIT opencourse 18.03 differential equation"
+---
+
 # 常微分方程组（六）：极限环与混沌
 
-[toc]
+* 
+{:toc}
+
+
 
 ### 回顾
 
 非线性一阶微分自治方程组
+
 $$
 \left\{\begin{matrix}
 x' = f(x,y)\\ 
 y' = g(x,y)
 \end{matrix}\right.
 $$
+
 速度场
 
 $\omega = f(x,y)dx + g(x,y)dy$
 
 方程组的解 / 轨迹 trajectory
+
 $$
 \begin{pmatrix}x(t)\\y(t)\end{pmatrix}
 $$
+
 切向量/速度向量
+
 $$
 \begin{pmatrix}x'\\y'\end{pmatrix}
 $$
+
 临界点
 
-$\begin{pmatrix}x\\y\end{pmatrix} = \begin{pmatrix}x_0\\y_0\end{pmatrix}$ 常数解   $\begin{pmatrix}x'\\y'\end{pmatrix} = \begin{pmatrix}0\\0\end{pmatrix}$ 速度向量为0
+$$\begin{pmatrix}x\\y\end{pmatrix} = \begin{pmatrix}x_0\\y_0\end{pmatrix}$$ 常数解   $$\begin{pmatrix}x'\\y'\end{pmatrix} = \begin{pmatrix}0\\0\end{pmatrix}$$ 速度向量为0
 
 ### 闭合轨迹 Closed Trajectory
 
@@ -61,25 +79,25 @@ $\begin{pmatrix}x\\y\end{pmatrix} = \begin{pmatrix}x_0\\y_0\end{pmatrix}$ 常数
 
   内外轨迹都逼近环
 
-  <img src=".\1stODE_system\SLC.png" alt="SLC" style="zoom:50%;" />
+  <img src="\assets\img\MIT18.06\1stODE_system\SLC.png" alt="SLC" style="zoom:50%;" />
 
 - **不稳定极限环 Unstable limit cycle**
 
   内外轨迹都远离环
 
-  <img src=".\1stODE_system\ULC.png" alt="ULC" style="zoom:50%;" />
+  <img src="\assets\img\MIT18.06\1stODE_system\ULC.png" alt="ULC" style="zoom:50%;" />
 
 - **半稳定极限环 Semi-stable limit cycle**
 
   内外轨迹一逼近一远离
 
-  <img src=".\1stODE_system\SSLC.png" alt="SSLC" style="zoom:50%;" />
+  <img src="\assets\img\MIT18.06\1stODE_system\SSLC.png" alt="SSLC" style="zoom:50%;" />
 
 - **中立稳定中心 Neutrally-stable center**
 
   不孤立的一系列闭合轨迹
 
-<img src=".\1stODE_system\NSC.png" alt="NSC" style="zoom:50%;" />
+<img src="\assets\img\MIT18.06\1stODE_system\NSC.png" alt="NSC" style="zoom:50%;" />
 
 #### 存在性
 
@@ -87,7 +105,7 @@ $\begin{pmatrix}x\\y\end{pmatrix} = \begin{pmatrix}x_0\\y_0\end{pmatrix}$ 常数
 
 其实这叫 **庞加莱-本迪克松环域定理 Poincare-Bendixson Ring Domain Theorem**
 
-<img src=".\1stODE_system\PB.png" alt="PB" style="zoom:67%;" />
+<img src="\assets\img\MIT18.06\1stODE_system\PB.png" alt="PB" style="zoom:67%;" />
 
 假设$R$是一个被两条简单曲线$D_1,D_2$包围的环域 且$D_2$被完全包围在$D_1$中，$F$是系统的速度场
 
@@ -103,10 +121,12 @@ $\begin{pmatrix}x\\y\end{pmatrix} = \begin{pmatrix}x_0\\y_0\end{pmatrix}$ 常数
 > **EXAMPLE**
 >
 > consider the system
+>
 > $$
 > x' = -y+x(1-x^2-y^2)\\
 > y' = x+y(1-x^2-y^2)
 > $$
+>
 > 速度场$\textbf{x}' = F = (-y\textbf{i} + x\textbf{j})+(1-r^2)(x\textbf{i}+y\textbf{j})$
 >
 > 其中r为到原点的距离 第一项是以原点为中心半径为r的圆的切向量 第二项是指向原点的法向量
@@ -156,14 +176,16 @@ for all $\textbf{x}\in D$, where $f,g$ are C-1 functions（一阶偏导存在且
 >
 > 反证法
 >
-> <img src=".\1stODE_system\bendixson.png" alt="bendixson" style="zoom:60%;" />
+> <img src="\assets\img\MIT18.06\1stODE_system\bendixson.png" alt="bendixson" style="zoom:60%;" />
 >
 > 假设区域$D$内有一闭合轨迹$C$ 其内部区域为$R$
 >
 > 则向量场$F$通过$C$的通量$\Phi$为
+>
 > $$
 > \oint_{C}F\cdot \hat{n}\ ds
 > $$
+>
 > 其中$\hat{n}$为每一点的法向量
 >
 > 一方面，由于$C$是向量场的一个轨迹 所以其处处与$F$相切 即$\hat n$处处与$F$垂直
@@ -171,9 +193,11 @@ for all $\textbf{x}\in D$, where $f,g$ are C-1 functions（一阶偏导存在且
 > 所以$\Phi = 0$
 >
 > 另一方面，根据格林公式
+>
 > $$
 > \oint_{C}F\cdot \hat{n}\ ds = \iint_R divF dA 
 > $$
+>
 > 因为$f,g$偏导存在且连续 所以$divF$在$D$上连续
 >
 > 又因为$divF$在$D$上处处不为0 所以要么$divF$ 散度处处大于0 要么处处小于0
@@ -193,20 +217,24 @@ for a region $D$ of the phase plane of the system, if there is no critical point
 >**EXAMPLE**
 >
 >for system
+>
 >$$
 >\left\{\begin{matrix}
 >x' = x^3+y^3\\ 
 >y' = 3x+y^3+2y
 >\end{matrix}\right.
 >$$
+>
 >$divF = 3x^2+3y^2+2\neq 0$ 所以其在相平面里无极限环
 >
 >for system
+>
 >$$
 >\left\{\begin{matrix}
 >x' = x^2+y^2+1\\ 
 >y' = x^2-y^2
 >\end{matrix}\right.
+>
 >$$
 >$divF = 2x+2y$ 在$y = -x$上，$divF = 0$ 所以只能判断去掉这根线的区域没有极限环 不能判断整个相平面上是否存在
 >
@@ -217,12 +245,14 @@ ps: 逆否命题是 一个闭合轨迹内部必有一个临界点
 ### A STORY
 
 >二次系统 quadratic system 是除线性系统外最简单的系统 其形式为
+>
 >$$
 >\left\{\begin{matrix}
 >x' = a_1x^2+b_1y^2+c_1xy+d_1x+e_1y+f_1\\ 
 >y' = a_2x^2+b_2y^2+c_2xy+d_2x+e_2y+f_2
 >\end{matrix}\right.
 >$$
+>
 >捕食者-猎物模型 知更鸟-蚯蚓模型都是典型的这一类系统
 >
 >1880年提出的问题
@@ -245,7 +275,7 @@ ps: 逆否命题是 一个闭合轨迹内部必有一个临界点
 >
 >我国数学家史松龄和王明淑（数学大师秦元勋的学生）举出了有四个极限环的二次系统的具体例子 （当然其中系数都是很离谱的那种）此后人们就不再修补佩特洛夫斯基和兰迪斯的论证了
 >
->有幸找到了那篇论文 https://wenku.baidu.com/view/5ded2c0691c69ec3d5bbfd0a79563c1ec5dad705.html
+>有幸找到了[那篇论文](https://wenku.baidu.com/view/5ded2c0691c69ec3d5bbfd0a79563c1ec5dad705.html)
 >
 >ps: 王明淑的儿子是当代著名数学家田刚（北大副校长） 果然是有其母必有其子么
 >
@@ -258,18 +288,22 @@ ps: 逆否命题是 一个闭合轨迹内部必有一个临界点
 #### Liénard equation
 
 对于系统
+
 $$
 x''+u(x)x'+v(x) = 0
 $$
+
 若$f,g$为在$R$上连续的函数 且$f$为偶函数 $g$为奇函数 则该系统称之为**Liénard equation**
 
 可以理解为一个弹簧-质量系统 阻尼随位置变化（e.g. 弹簧穿过一个密度变化的介质）弹性系数取决于弹簧是怎么伸展的
 
 把其化为一阶系统
+
 $$
 x' = y\\
 y' = -v(x)-u(x)y
 $$
+
 该系统含有且仅有一个极限环 且该极限环必稳定的条件为
 
 **Levinson-Smith Theorem**
@@ -280,7 +314,7 @@ $$
 
 - $V(x)\rightarrow \infty$ as $x\rightarrow \infty$ , where $V(x) = \int_0^xv(t)dt$
 
-- $\exist k>0,s.t.$
+- $\exists k>0,s.t.$
 
   $U(x)<0$ for $0<x<k$
 
@@ -297,15 +331,17 @@ $$
 - 所有非零轨迹旋转逼近$C$ 当$t\rightarrow \infty$
 
 **应用：范德波尔方程 van der Pol equation**
+
 $$
 x''-a(1-x^2)x'+x = 0
 $$
+
 描述的是真空管内部电流的情况 a为正常数 取决于真空管类型 有唯一周期解
 
 混沌理论相关可以看相关科普 做不动乐（ε=ε=ε=┏(゜ロ゜;)┛）
 
 讲义里提到了 **离散逻辑斯蒂方程（逻辑斯蒂映射/单峰映射）Discrete Logistic Equation ,费根鲍姆常数 Feigenbaum constant，受迫杜芬方程 The forced Duffing Equation，洛伦兹奇异吸引子 Lorenz Strange Attractor** 
 
-https://ocw.mit.edu/courses/mathematics/18-03sc-differential-equations-fall-2011/unit-iv-first-order-systems/limitations-of-the-linear-limit-cycles-and-chaos/MIT18_03SCF11_s38_5text.pdf
+[limitations-of-the-linear-limit-cycles-and-chaos](https://ocw.mit.edu/courses/mathematics/18-03sc-differential-equations-fall-2011/unit-iv-first-order-systems/limitations-of-the-linear-limit-cycles-and-chaos/MIT18_03SCF11_s38_5text.pdf)
 
-https://en.wikipedia.org/wiki/Chaos_theory
+[wiki - Chaos theory](https://en.wikipedia.org/wiki/Chaos_theory)
