--- a/_posts/2020-01-25-3.2.Laplace_Transform.md
+++ b/_posts/2020-01-25-3.2.Laplace_Transform.md
@@ -1,24 +1,36 @@
-# Laplace Transform
+---
+title: 3.2 Laplace Transform
+layout: post
+categories: [ODE, Math, MIT 18.06 Differential Equation]
+image: 
+description: "3.2 Laplace Transform"
+customexcerpt: "Notes for MIT opencourse 18.03 differential equation"
+---
 
 ### 引
 
 对于幂级数 power series 
+
 $$
 \sum_{0}^{\infty}{a_{n}x^n} = A(x)
 $$
+
 左边看成关于n的函数 n从0，1，2...取到$\infty$
 
 那么当n的取值从***<font color = red>离散</font>*** 变为***<font color = red>连续</font>*** 时，会发生什么？
 
 ...t从0连续取到$\infty$，再求和...
+
 $$
 \int_{0}^{\infty}a(t)x^tdt = A(x)
 $$
+
 为了方便 将$x^t$写成$(e^{lnx})^t ,0<x<1$以使积分收敛
 
 再将$lnx$替换为$-s,s>0$，即得到了$a(t)$的拉普拉斯变换 Laplace Transform
 
 以更正式的形式写出
+
 $$
 \int_{0}^{\infty}{f(t)e^{-st}}dt = F(s)
 $$
@@ -35,17 +47,22 @@ $$
 
 
 
-[toc]
+* 
+{:toc}
+
 
 ---
 
 ### 变换 & 算子
 
 变换变量改变
+
 $$
 f(t)\stackrel{}{\longrightarrow}\boxed{transform}\stackrel{}{\longrightarrow}F(s)
 $$
+
 算子变量不变
+
 $$
 f(t)\stackrel{}{\longrightarrow}\boxed{operator}\stackrel{}{\longrightarrow}g(t)
 $$
@@ -68,6 +85,7 @@ e^{at}f(t) \leadsto F(s-a)
 $$
 
 >**PROOF**
+>
 >$$
 >\int_{0}^{\infty}{e^{at}f(t)e^{-st}dt} = \int_{0}^{\infty}{f(t)e^{-(s-a)t}dt} = F(s-a)
 >$$
@@ -79,15 +97,19 @@ $$
 $f(t)$是指数形式 exponential type/ of exponential order
 
 对于$\forall t>0,\exists C>0,k>0$ 这是视频上的定义
+
 $$
 s.t.\left|f(t)\right|\leqslant Ce^{kt}
 $$
+
 事实上应该是
 
-$\exist M,C,\alpha,\forall t>M,$
+$\exists M,C,\alpha,\forall t>M,$
+
 $$
 s.t.|f(t)|\leqslant Ce^{\alpha t}
 $$
+
 $f(t)$ of exponential order $\alpha$ $f(t)$是$\alpha$指数阶函数
 
 其实就是$f(t) \in O(e^{\alpha t})$
@@ -104,12 +126,14 @@ $f(t)$ of exponential order $\alpha$ $f(t)$是$\alpha$指数阶函数
 
 > **PROOF**
 >
-> suppose $Re(s) > a$ and $|f(t)|<Me^{at}$， we write $s = (a+\alpha)+ib$, where $\alpha > 0$
+> suppose $$ Re(s) > a $$ and $ \|f(t)\| < Me^{at} $， we write $$ s = (a+\alpha)+ib $$, where $\alpha > 0$
 >
-> then, since $|e^{-bit}| = 1$
+> then, since $ \|e^{-bit}\| = 1$
+>
 > $$
-> |f(t)e^{-st}| = |f(t)e^{-(a+\alpha)t}e^{-bit}| =  |f(t)e^{-(a+\alpha)t}|<Me^{-\alpha t}
+> |f(t)e^{-st}| = |f(t)e^{-(a+\alpha)t}e^{-bit}| =  |f(t)e^{-(a+\alpha)t}| < Me^{-\alpha t}
 > $$
+>
 > since $\int_0^\infty Me^{-\alpha t}dt$ converges for $\alpha > 0$ 所以拉普拉斯变换收敛
 >
 > 其实就是绝对值审敛法
@@ -124,6 +148,7 @@ $$
 $$
 
 > **PROOF**
+>
 > $$
 > \mathcal{L}(f'(t)) = \int_{0}^{\infty}{f'(t)e^{-st}}dt \\
 > = e^{-st}f(t)\Big|_0^\infty -(-s)\int_{0}^{\infty}{f(t)e^{-st}}dt\\
@@ -145,6 +170,7 @@ $$
 $$
 
 > **PROOF**
+>
 > $$
 > F(s) = \mathcal{L}(f) = \int_{0}^{\infty}{f(t)e^{-st}}dt\\
 > F'(s) = \frac{d}{ds}\int_{0}^{\infty}{f(t)e^{-st}}dt\\
@@ -159,6 +185,7 @@ $$
 $$
 
 > **PROOF**
+>
 > $$
 > \mathcal{L}(\int_0^tf(u)du) = \mathcal{L}(f(t)*1) = \mathcal{L}(f)\mathcal{L}(1) = \frac{F(s)}{s}
 > $$
@@ -170,6 +197,7 @@ $$
 $$
 
 > **PROOF**
+>
 > $$
 > \int_s^\infty F(u)du = \int_s^\infty\int_0^\infty f(t)e^{-ut}dt du\\
 > =\int_0^\infty(\int_s^\infty f(t)e^{-ut}du)dt = \int_0^\infty \frac{f(t)}{t}e^{-st}dt\\ = \mathcal{L}(\frac{f(t)}{t})
@@ -196,11 +224,14 @@ $$
 > $e^{at}\leadsto\frac{1}{s-a}$:  根据指数位移法则 $e^{at}\cdot 1 \leadsto F(s-a) = \frac{1}{s-a}$
 >
 > $t^n\leadsto \frac{n!}{s^{n+1}}$:
+>
 > $$
 > \int_{0}^{\infty}{t^ne^{-st}dt} = t^n\frac{e^{st}}{-s}\Big|_0^\infty + \frac{n}{s}\int_{0}^{\infty}t^{n-1}e^{-st}dt\\
 > \mathcal{L}(t^n) = \frac{n}{s}\mathcal{L}(t^{n-1}) = \frac{n}{s}\frac{n-1}{s}\mathcal{L}(t^{n-2}) = \\\frac{n!}{s^n}\mathcal{L}(t^0) = \frac{n!}{s^n}\mathcal{L}(1) = \frac{n!}{s^{n+1}}
 > $$
+>
 > $cos(at)\leadsto \frac{s}{s^2+a^2}$:  复指数变换取实部或用逆向欧拉公式
+>
 > $$
 > \mathcal{L}(cos(at)) = \mathcal{L}(\frac{e^{iat}+e^{-iat}}{2}) = \frac{1}{2}(\frac{1}{s-ia}+\frac{1}{s+ia})\\=\frac{s}{s^2+a^2}
 > $$
@@ -212,6 +243,7 @@ $$
 一般碰到有理式 裂项 再查表得到逆变换结果
 
 e.g.
+
 $$
 \frac{1}{s(s+3)} = \frac{1}{3}(\frac{1}{s}-\frac{1}{s+3})\\
 \mathcal{L}^{-1}(\frac{1}{s(s+3)}) = \frac{1}{3}(1-e^{-3t})
@@ -225,7 +257,7 @@ $$
 
 #### Heaviside Cover-up Method 
 
-https://zhuanlan.zhihu.com/p/94237840
+<a href = "https://zhuanlan.zhihu.com/p/94237840"> Heaviside Cover-up Method </a>
 
 注：对于无实数解的项其实也可以用cover-up带入复数解 再取实数项
 
@@ -244,21 +276,25 @@ $$
 > e.g. $y'' - y = e^{-t},y(0) = 1,y'(0) = 0$
 >
 > 1. 两边进行拉普拉斯变换（依据是拉氏变换的线性）
->
-> $$
-> s^2Y-s-Y = \frac{1}{s+1}
-> $$
->
+>    
+>    $$
+>    s^2Y-s-Y = \frac{1}{s+1}
+>    $$
+>    
 > 2. 整理得
+>    
 >    $$
 >    Y = \frac{s^2+s+1}{(s+1)^2(s-1)}
 >    $$
-> 分式分解（用cover-up method 18.01里有讲）
+>
+>    分式分解（用cover-up method 18.01里有讲）
+>
 >    $$
 >    Y = \frac{-\frac{1}{2}}{(s+1)^2} + \frac{\frac{1}{4}}{s+1} + \frac{\frac{3}{4}}{s-1}
 >    $$
 >    
 > 3. 逆变换
+>
 >    $$
 >    \mathcal{L}^{-1}(Y) = -\frac{1}{2}te^{-t} + \frac{1}{4}e^{-t} + \frac{3}{4}e^t
 >    $$
@@ -276,21 +312,23 @@ $$
 
 ##### 单位跃阶 Unit Step
 
-<img src=".\Laplace_Transform\Unit step.png" alt="Unit step" style="float:left;zoom:50%;" />
+<img src="\assets\img\MIT18.06\Laplace_Transform\Unit step.png" alt="Unit step" style="zoom:50%;"/>
 
 记为$u(t)$ 又称为**赫维赛德函数 Heaviside function** 
 
 在神经网络中可以作为激活函数 activation function 来用（但是是蛮烂的那种 通常只在单层感知器上有用）
 
+
 ##### a处跃阶
 
-<img src=".\Laplace_Transform\a.png" alt="a" style="float:left;zoom:50%;" />
+<img src="\assets\img\MIT18.06\Laplace_Transform\a.png" alt="a" style="zoom:50%;"/>
 
 记为$u_a(t) = u(t-a)$
 
+
 ##### 单位方框函数 Unit Box Function
 
-<img src=".\Laplace_Transform\Unit Box.png" alt="Unit Box" style="float:left;zoom:50%;" />
+<img src="\assets\img\MIT18.06\Laplace_Transform\Unit Box.png" alt="Unit Box" style="zoom:50%;"/>
 
 记为$u_{ab}(t) = u_a(t) - u_b(t) = u(t-a)-u(t-b)$
 
@@ -300,11 +338,13 @@ ps: characteristic function of $[a,b]$ : $\chi_{[a,b]}(x)$
 
 以上三类函数可用于用单个式子表示分段函数
 
+
 #### 唯一化
 
-<font color = red>***拉普拉斯变换不关心t<0的情况***</font>（因为积分从0到 $\infty$ ），因此无论t<0的值为何，只要t>0时相等 拉普拉斯变换都一样
+<font color = red><i><b>拉普拉斯变换不关心t < 0的情况</b></i></font>（因为积分从0到 $\infty$ ），因此无论t < 0的值为何，只要t > 0时相等 拉普拉斯变换都一样
 
 为了让拉普拉斯逆变换唯一，我们强制让所有小于t的函数值等于0,即
+
 $$
 \mathcal{L}^{-1}(F(S)) = u(t)f(t)
 $$
@@ -312,6 +352,7 @@ $$
 #### t轴平移公式 t axis translation formula
 
 得到平移函数的拉普拉斯变换
+
 $$
 u(t-a)f(t-a)\leadsto e^{-as}F(s)\tag{a>0}
 $$
@@ -325,6 +366,7 @@ $$
 当a小于0时不成立 因为拉普拉斯变换会丢掉小于零的信息
 
 > **PROOF**
+>
 > $$
 > \int_0^\infty{e^{-st}u(t-a)f(t-a)}dt\tag{let x = t - a}\\
 > =\int_{-a}^\infty{e^{-s(x+a)}u(x)f(x)}dx\\
