--- a/_posts/2020-01-26-3.4.Paul-Dirac_δ_Function.md
+++ b/_posts/2020-01-26-3.4.Paul-Dirac_δ_Function.md
@@ -1,5 +1,11 @@
-
-# 狄拉克δ函数
+---
+title: 3.4 Paul-Dirac δ Function
+layout: post
+categories: [ODE, Math, MIT 18.06 Differential Equation]
+image: 
+description: "3.4 Paul-Dirac δ Function"
+customexcerpt: "Notes for MIT opencourse 18.03 differential equation"
+---
 
 ### 引
 
@@ -7,20 +13,24 @@
 
 其实就是单位冲量
 
-<img src=".\Dirac_Function\unit impulse.png" alt="unit impulse" style="zoom:50%;" />
+<img src="\assets\img\MIT18.06\Dirac_Function\unit impulse.png" alt="unit impulse" style="zoom:50%;" />
 
 对系统的影响写成一个微分方程
+
 $$
 y'' + y = \frac{1}{h}u_{oh}(t)
 $$
+
 我们的任务是研究单位脉冲对系统的影响，于是Laplace变换来乐
 
-<img src=".\Dirac_Function\watashigakita.png" alt="watashigakita" style="zoom:50%;" />
+<img src="\assets\img\MIT18.06\Dirac_Function\watashigakita.png" alt="watashigakita" style="zoom:50%;" />
 
-（大雾）
+(大雾)
+
 $$
 \frac{1}{h}u_{oh}(t) = \frac{1}{h}(u(t)-u(t-h)) \leadsto \frac{1}{h}\frac{1-e^{-hs}}{s}
 $$
+
  那末，当冲击时间越来越短 但是冲量保持1不变 拉普拉斯变换会怎么样？
 
 $$
@@ -31,15 +41,15 @@ $$
 
 ...h越来越小，1/h越来越大，方块**面积不变**，但越来越窄，越来越高...
 
-于是我们得到了<font color = red>**狄拉克δ函数δ(t) Paul Dirac's Delta Function**</font>，它是一个广义函数，在除了零以外的点函数值都等于零，零处的值无法严谨表达，但是其在整个定义域上的积分等于1，拉普拉斯变换为1
+于是我们得到了<span style = "color:red;font-style:italic">**狄拉克δ函数δ(t) Paul Dirac's Delta Function**</span>，它是一个广义函数，在除了零以外的点函数值都等于零，零处的值无法严谨表达，但是其在整个定义域上的积分等于1，拉普拉斯变换为1
 
-<img src=".\Dirac_Function\delta.png" alt="delta" style="zoom: 50%;" />
+<img src="\assets\img\MIT18.06\Dirac_Function\delta.png" alt="delta" style="zoom: 50%;" />
 
 ---
 
 
-
-[toc]
+* 
+{:toc}
 
 ---
 
@@ -70,55 +80,67 @@ e.g. 对 $y'' + y = A\delta(t-\frac{\pi}{2})$
 在$\frac{\pi}{2}$对系统踢了一脚施加了A的冲量
 
 先拉氏变换
+
 $$
 s^2Y-s+Y = Ae^{-\frac{\pi}{2}s}\cdot 1\\
 Y = \frac{s}{s^2+1} + \frac{Ae^{-\frac{\pi}{2}s}}{s^2+1}
 $$
+
 再逆变换
+
 $$
 y = cos(t) + Asin(t-\frac{\pi}{2}) = \left\{\begin{matrix}
 cos(t), t\in [0,\frac{\pi}{2}]\\ 
 (1-A)cos(t), t\geqslant \frac{\pi}{2}
 \end{matrix}\right.
 $$
+
 根据A的不同 系统在$\frac{\pi}{2}$有不同相应
 
-<img src=".\Dirac_Function\response.png" alt="response" style="zoom:50%;" />
+<img src="\assets\img\MIT18.06\Dirac_Function\response.png" alt="response" style="zoom:50%;" />
 
 ---
 
 ### 传递函数/系统的加权函数/冲激响应
 
 对于一个初值为0的二阶系统
+
 $$
 y'' + ay' + by = f(t), y(0) = 0,y'(0) = 0
 $$
+
 拉普拉斯变换
+
 $$
 s^2Y + asY + bY = F(s)\\
 Y = F(s)\frac{1}{s^2+as+b}
 $$
+
 如何求响应y？ 计算$f(t)$和$\mathcal{L}^{-1}(\frac{1}{s^2+as+b})$的卷积
 
-$\frac{1}{s^2+as+b}$ 只取决于系统 称为<font color = red>***传递函数 transfer function***</font>  记作$W(s)$或$H(s)$
+$\frac{1}{s^2+as+b}$ 只取决于系统 称为<span style = "color:red;font-style:italic">**传递函数 transfer function**</span>  记作$W(s)$或$H(s)$
 
-其拉普拉斯逆变换为 <font color = red>***系统的加权函数 weight function of the system***</font>  记作$W(t)$
+其拉普拉斯逆变换为 <span style = "color:red;font-style:italic">**系统的加权函数 weight function of the system**</span>  记作$W(t)$
 
 那末 $W(t)$的意义具体是什么？
 
-即<font color = red>***单位冲激响应 unit impulse response***</font> 给予一个零状态系统单位冲激得到的响应
+即<span style = "color:red;font-style:italic">**单位冲激响应 unit impulse response**</span> 给予一个零状态系统单位冲激得到的响应
+
 $$
 y'' + ay' + by = \delta(t)\\
 s^2Y + asY + bY = 1\\
 Y = \frac{1}{s^2+as+b}\\
 \mathcal{L}^{-1}(Y) = W(t)
 $$
+
 所以常系数二阶线性系统的响应y被表示了出来
 
 <span style = "color:red;font-style:italic">**Green's Formula**</span>
+
 $$
 y = \int_{0}^{t}f(u)w(t-u)du
 $$
+
 可以理解为一直踢踢踢踢踢踢......
 
 **Marvelous！**
