--- a/_posts/2020-01-23-3.1.Fourier_Series.md
+++ b/_posts/2020-01-23-3.1.Fourier_Series.md
@@ -1,8 +1,8 @@
 ---
-title: 3.1 Fourier Series
+title: MIT 18.06 Differential Equation - 3.1 Fourier Series
 layout: post
 categories: [ODE, Math, MIT 18.06 Differential Equation]
-image: 
+image: /assets/img/MIT18.06/fourier_cover.png
 description: "3.1 Fourier Series"
 customexcerpt: "Notes for MIT opencourse 18.03 differential equation"
 ---
