--- a/_posts/2020-01-25-3.3.Convolution.md
+++ b/_posts/2020-01-25-3.3.Convolution.md
@@ -1,5 +1,5 @@
 ---
-title: 3.3 Convolution
+title: MIT 18.06 Differential Equation - 3.3 Convolution
 layout: post
 categories: [ODE, Math, MIT 18.06 Differential Equation]
 image: 
