--- a/_posts/2020-01-26-3.4.Paul-Dirac_δ_Function.md
+++ b/_posts/2020-01-26-3.4.Paul-Dirac_δ_Function.md
@@ -1,8 +1,8 @@
 ---
-title: 3.4 Paul-Dirac δ Function
+title: MIT 18.06 Differential Equation - 3.4 Paul-Dirac δ Function
 layout: post
 categories: [ODE, Math, MIT 18.06 Differential Equation]
-image: 
+image: /assets/img/MIT18.06/delta_cover.png
 description: "3.4 Paul-Dirac δ Function"
 customexcerpt: "Notes for MIT opencourse 18.03 differential equation"
 ---
