--- a/_posts/2020-02-01-4.3.Decoupling.md
+++ b/_posts/2020-02-01-4.3.Decoupling.md
@@ -1,5 +1,5 @@
 ---
-title: 4.3 Decoupling
+title: MIT 18.06 Differential Equation - 4.3 Decoupling
 layout: post
 categories: [ODE, Math, MIT 18.06 Differential Equation]
 image: 
