--- a/_posts/2020-01-25-3.2.Laplace_Transform.md
+++ b/_posts/2020-01-25-3.2.Laplace_Transform.md
@@ -1,5 +1,5 @@
 ---
-title: 3.2 Laplace Transform
+title: MIT 18.06 Differential Equation - 3.2 Laplace Transform
 layout: post
 categories: [ODE, Math, MIT 18.06 Differential Equation]
 image: 
