--- a/_posts/2020-02-01-4.1.linear_ode_system.md
+++ b/_posts/2020-02-01-4.1.linear_ode_system.md
@@ -1,5 +1,5 @@
 ---
-title: 4.1 linear ode system
+title: MIT 18.06 Differential Equation - 4.1 linear ode system
 layout: post
 categories: [ODE, Math, MIT 18.06 Differential Equation]
 image: 
