--- a/_posts/2020-02-01-4.4.matrix_exponential.md
+++ b/_posts/2020-02-01-4.4.matrix_exponential.md
@@ -1,5 +1,5 @@
 ---
-title: 4.4 Matrix Exponential
+title: MIT 18.06 Differential Equation - 4.4 Matrix Exponential
 layout: post
 categories: [ODE, Math, MIT 18.06 Differential Equation]
 image: 
