--- a/_posts/2020-02-07-4.5.portrait.md
+++ b/_posts/2020-02-07-4.5.portrait.md
@@ -1,5 +1,5 @@
 ---
-title: 4.5 Portrait
+title: MIT 18.06 Differential Equation - 4.5 Portrait
 layout: post
 categories: [ODE, Math, MIT 18.06 Differential Equation]
 image: 
