--- a/_posts/2020-02-07-4.7.nonlinear.md
+++ b/_posts/2020-02-07-4.7.nonlinear.md
@@ -1,5 +1,5 @@
 ---
-title: 4.7 Nonlinear Eq
+title: MIT 18.06 Differential Equation - 4.7 Nonlinear Eq
 layout: post
 categories: [ODE, Math, MIT 18.06 Differential Equation]
 image: 
