--- a/_posts/2020-01-25-3.2.Laplace_Transform.md
+++ b/_posts/2020-01-25-3.2.Laplace_Transform.md
@@ -2,7 +2,7 @@
 title: MIT 18.06 Differential Equation - 3.2 Laplace Transform
 layout: post
 categories: [ODE, Math, MIT 18.06 Differential Equation]
-image: 
+image: /assets/img/MIT18.06/cover.jpg
 description: "3.2 Laplace Transform"
 customexcerpt: "Notes for MIT opencourse 18.03 differential equation"
 ---
