--- a/_posts/2020-02-01-4.1.linear_ode_system.md
+++ b/_posts/2020-02-01-4.1.linear_ode_system.md
@@ -2,7 +2,7 @@
 title: MIT 18.06 Differential Equation - 4.1 linear ode system
 layout: post
 categories: [ODE, Math, MIT 18.06 Differential Equation]
-image: 
+image: /assets/img/MIT18.06/cover.jpg
 description: "4.1 linear ode system"
 customexcerpt: "Notes for MIT opencourse 18.03 differential equation"
 ---
