--- a/_posts/2020-02-07-4.7.nonlinear.md
+++ b/_posts/2020-02-07-4.7.nonlinear.md
@@ -2,7 +2,7 @@
 title: MIT 18.06 Differential Equation - 4.7 Nonlinear Eq
 layout: post
 categories: [ODE, Math, MIT 18.06 Differential Equation]
-image: 
+image: /assets/img/MIT18.06/cover.jpg
 description: "4.7 Nonlinear Eq"
 customexcerpt: "Notes for MIT opencourse 18.03 differential equation"
 ---
